# sumty

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: coverage.cmake  doxygen.cmake  format.cmake  install-setup.cmake  lints.cmake  settings.cmake  warnings.cmake
include/anyopt/: option.hpp  uninit.hpp
include/sumty/: error_set.hpp  exceptions.hpp  option.hpp  result.hpp  utils.hpp  variant.hpp
include/sumty/detail/: auto_union.hpp  fwd.hpp  traits.hpp  utils.hpp  variant_impl.hpp
include/sumty/impl/: option.hpp  result.hpp  variant.hpp
tests/: CMakeLists.txt  error_set.cpp  option.cpp  result.cpp  uninit.cpp  variant.cpp
